--- a/MuServer/DataServer/DataServer.ini
+++ b/MuServer/DataServer/DataServer.ini
@@ -1,8 +1,12 @@
+[DataBaseInfo]
+DataBaseHost=tcp://127.0.0.1
+DataBasePort=3306
+DataBaseUser=admin
+DataBasePass=HxC4Ever
+DataBaseName=MuOnline97
+
 [DataServerInfo]
-DataServerHost = tcp://127.0.0.1:3306
-DataServerUSER = admin
-DataServerPASS = kayitoMuServer97
-DataServerDB = MuOnline97
-DataServerPort = 55980
+DS_TCP_Port=55980
+
 [Syntax]
 EnableSpecialCharacters=1
