--- a/MuServer/JoinServer/JoinServer.ini
+++ b/MuServer/JoinServer/JoinServer.ini
@@ -1,11 +1,16 @@
+[DataBaseInfo]
+DataBaseHost=tcp://127.0.0.1
+DataBasePort=3306
+DataBaseUser=admin
+DataBasePass=HxC4Ever
+DataBaseName=MuOnline97
+
 [JoinServerInfo]
-JoinServerHost = tcp://127.0.0.1:3306
-JoinServerUSER = admin
-JoinServerPASS = kayitoMuServer97
-JoinServerDB = MuOnline97
-JoinServerPort = 55990
-ConnectServerAddress = 127.0.0.1
-ConnectServerPort = 55601
+JS_TCP_Port=55990
+
+ConnectServerAddress=127.0.0.1
+ConnectServerUDPPort=55601
+
 CaseSensitive = 1
 MD5Encryption = 0
-GlobalPassword = kayitoMuServer97
+GlobalPassword = HxC4Ever
